--- a/vmess_tvc_clash.yaml
+++ b/vmess_tvc_clash.yaml
@@ -19,24 +19,23 @@ proxies:
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 15","type":"vmess","server":"183.236.48.163","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 16","type":"vmess","server":"120.232.153.27","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vmess | @prrofile_purple | 146","type":"vmess","server":"france1.okreza151m.ir","port":5156,"cipher":"auto","uuid":"259daf00-ad91-4b63-aef7-6911af21052a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 4","type":"vmess","server":"89.44.242.249","port":2040,"cipher":"auto","uuid":"b4974517-249a-4e20-910c-2cf8d868bff3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 7","type":"vmess","server":"89.44.242.247","port":2030,"cipher":"auto","uuid":"b4974517-249a-4e20-910c-2cf8d868bff3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
-  - {"name":"🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 12","type":"vmess","server":"89.44.242.255","port":2000,"cipher":"auto","uuid":"b4974517-249a-4e20-910c-2cf8d868bff3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🇦🇪AE | 🟢 | vmess | @ConfigsHUB | 0","type":"vmess","server":"94.140.0.241","port":8880,"cipher":"auto","uuid":"248be52b-35d9-34cb-9b73-e12b78bc1301","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/dabai.in","headers":{"host":"TG.WangCai2.s2.db-link02.top"}},"client-fingerprint":"chrome"}
+  - {"name":"🚩CF | 🟢 | vmess | @ConfigsHUB | 2","type":"vmess","server":"108.162.192.241","port":8880,"cipher":"auto","uuid":"248be52b-35d9-34cb-9b73-e12b78bc1301","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/dabai.in","headers":{"host":"TG.WangCai2.s2.db-link02.top"}},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vmess | @proxystore11 | 5","type":"vmess","server":"65.109.190.91.suupermeat.ir","port":2053,"cipher":"auto","uuid":"b4493eed-d316-45d5-addf-9857ffeba30e","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇹🇼TW | 🟢 | vmess | @yaney_01 | 1","type":"vmess","server":"45.199.138.217","port":41000,"cipher":"auto","uuid":"f9fa3a9c-f7d5-414f-88e6-6970585d9949","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/282018252526","headers":{"host":""}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @yaney_01 | 2","type":"vmess","server":"107.149.119.43","port":37000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/040318142507","headers":{"host":""}},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vmess | @yaney_01 | 3","type":"vmess","server":"admin.arzonhost.ir","port":2086,"cipher":"auto","uuid":"7d93e992-48cf-42d4-84f8-75768e815a4c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"admin.arzonhost.ir"}},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vmess | @yaney_01 | 4","type":"vmess","server":"ddd47481-0d6f-08b9-7209-b0ddc0c5fa45.oneplus.pub","port":80,"cipher":"auto","uuid":"46cfcfe1-e450-459d-a3ab-9406011ab3eb","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"tms.dingtalk.com"}},"client-fingerprint":"chrome"}
-  - {"name":"🇧🇪BE | 🟢 | vmess | @Hope_Net | 0","type":"vmess","server":"185.193.29.58","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 1","type":"vmess","server":"92.53.191.232","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 3","type":"vmess","server":"45.159.218.131","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇳🇱NL | 🟢 | vmess | @Hope_Net | 6","type":"vmess","server":"185.148.107.184","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vmess | @Hope_Net | 7","type":"vmess","server":"185.221.160.87","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇺🇦UA | 🟢 | vmess | @Hope_Net | 8","type":"vmess","server":"89.116.180.209","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇳🇱NL | 🟢 | vmess | @Hope_Net | 11","type":"vmess","server":"94.242.230.206","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vmess | @Hope_Net | 12","type":"vmess","server":"5.182.84.123","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇦🇪AE | 🟢 | vmess | @Hope_Net | 0","type":"vmess","server":"77.232.140.250","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vmess | @Hope_Net | 1","type":"vmess","server":"154.197.75.0","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇧🇪BE | 🟢 | vmess | @Hope_Net | 2","type":"vmess","server":"185.193.29.58","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 3","type":"vmess","server":"92.53.191.232","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 5","type":"vmess","server":"45.159.218.131","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇳🇱NL | 🟢 | vmess | @Hope_Net | 8","type":"vmess","server":"185.148.107.184","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇷🇺RU | 🟢 | vmess | @Hope_Net | 9","type":"vmess","server":"185.221.160.87","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
+  - {"name":"🇺🇦UA | 🟢 | vmess | @Hope_Net | 10","type":"vmess","server":"89.116.180.209","port":443,"cipher":"auto","uuid":"9b38d152-6b12-4de0-a20d-87a8c9034cc4","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"@RaFaV2Bot","headers":{"host":"zLMiXBYNAwsZqkpmsdrbgtPRhTQuIcv.roxifa.ir"}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @fnet00 | 1","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmessws","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vmess | @FreakConfig | 11","type":"vmess","server":"45.67.230.79","port":11052,"cipher":"auto","uuid":"314185f7-931d-4656-922d-0857e7afd224","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🇷🇺RU | 🟢 | vmess | @FreakConfig | 12","type":"vmess","server":"45.67.230.79","port":11052,"cipher":"auto","uuid":"314185f7-931d-4656-922d-0857e7afd224","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
 proxy-groups:
   - name: MANUAL
     type: select
@@ -55,24 +54,23 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 4'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 7'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 12'
+      - '🇦🇪AE | 🟢 | vmess | @ConfigsHUB | 0'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 2'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 5'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
       - '❔XX | 🟢 | vmess | @yaney_01 | 3'
       - '❔XX | 🟢 | vmess | @yaney_01 | 4'
-      - '🇧🇪BE | 🟢 | vmess | @Hope_Net | 0'
-      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 1'
+      - '🇦🇪AE | 🟢 | vmess | @Hope_Net | 0'
+      - '🇩🇪DE | 🟢 | vmess | @Hope_Net | 1'
+      - '🇧🇪BE | 🟢 | vmess | @Hope_Net | 2'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 3'
-      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 6'
-      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 7'
-      - '🇺🇦UA | 🟢 | vmess | @Hope_Net | 8'
-      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 11'
-      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 12'
+      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 5'
+      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 8'
+      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 9'
+      - '🇺🇦UA | 🟢 | vmess | @Hope_Net | 10'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 11'
+      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 12'
   - name: URL-TEST
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -91,24 +89,23 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 4'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 7'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 12'
+      - '🇦🇪AE | 🟢 | vmess | @ConfigsHUB | 0'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 2'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 5'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
       - '❔XX | 🟢 | vmess | @yaney_01 | 3'
       - '❔XX | 🟢 | vmess | @yaney_01 | 4'
-      - '🇧🇪BE | 🟢 | vmess | @Hope_Net | 0'
-      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 1'
+      - '🇦🇪AE | 🟢 | vmess | @Hope_Net | 0'
+      - '🇩🇪DE | 🟢 | vmess | @Hope_Net | 1'
+      - '🇧🇪BE | 🟢 | vmess | @Hope_Net | 2'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 3'
-      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 6'
-      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 7'
-      - '🇺🇦UA | 🟢 | vmess | @Hope_Net | 8'
-      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 11'
-      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 12'
+      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 5'
+      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 8'
+      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 9'
+      - '🇺🇦UA | 🟢 | vmess | @Hope_Net | 10'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 11'
+      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 12'
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
@@ -126,24 +123,23 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
       - '❔XX | 🟢 | vmess | @prrofile_purple | 146'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 4'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 7'
-      - '🇮🇷IR | 🟢 | vmess | @ConfigsHUB | 12'
+      - '🇦🇪AE | 🟢 | vmess | @ConfigsHUB | 0'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 2'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 5'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇺🇸US | 🟢 | vmess | @yaney_01 | 2'
       - '❔XX | 🟢 | vmess | @yaney_01 | 3'
       - '❔XX | 🟢 | vmess | @yaney_01 | 4'
-      - '🇧🇪BE | 🟢 | vmess | @Hope_Net | 0'
-      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 1'
+      - '🇦🇪AE | 🟢 | vmess | @Hope_Net | 0'
+      - '🇩🇪DE | 🟢 | vmess | @Hope_Net | 1'
+      - '🇧🇪BE | 🟢 | vmess | @Hope_Net | 2'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 3'
-      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 6'
-      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 7'
-      - '🇺🇦UA | 🟢 | vmess | @Hope_Net | 8'
-      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 11'
-      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 12'
+      - '🇺🇸US | 🟢 | vmess | @Hope_Net | 5'
+      - '🇳🇱NL | 🟢 | vmess | @Hope_Net | 8'
+      - '🇷🇺RU | 🟢 | vmess | @Hope_Net | 9'
+      - '🇺🇦UA | 🟢 | vmess | @Hope_Net | 10'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 11'
+      - '🇷🇺RU | 🟢 | vmess | @FreakConfig | 12'
 rules:
  - GEOIP,IR,DIRECT
  - MATCH,MANUAL
